--- a/app/views/helloworld.html
+++ b/app/views/helloworld.html
@@ -5,7 +5,7 @@
   <button class="btn btn-default">Bootstrap painike</button>
   <button class="btn btn-primary">Bootstrap painike</button>
   <button class="btn btn-success">Bootstrap painike</button>
-  <button class="btn btn-danger">Bootstrap painike</button>
+  <button class="btn btn-danger">Bootstrap painike testi</button>
 
   <h1>Tekstikentät</h1>
   <input type="text" placeholder="Tavallinen tekstikenttä">
