--- a/app/views/testi.html
+++ b/app/views/testi.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="page-header">
-    <h1>Tervetuloa Tsoha Bootstrappiin!</h1>
-  </div>
+    <h1>Testi!</h1>
+
 
   <p>
       Testi
   </p>
-    
+  <p>
+    <a href="http://tsoha.github.io" class="btn btn-primary btn-lg">Tutustu materiaaliin <span class="glyphicon glyphicon-chevron-right"></span></a>
+  </p>
 {% endblock %}
