--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,13 +33,13 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Viinitietokanta</a>
+          <h1>Viinitietokanta</h1>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="winelist">Etusivu</a></li>
+            <li><a href="{{base_path}}">Etusivu</a></li>
             <li><a href="signup">Rekisteröidy</a></li>
             <li><a href="login">Kirjaudu</a></li>
           </ul>
