--- a/app/views/wine/wine_show.html
+++ b/app/views/wine/wine_show.html
@@ -9,6 +9,7 @@
       <ul>
         <li><strong>Alkuperä: </strong>{{wine.region}} </li>
         <li><strong>Tyyppi: </strong>{{wine.type}}</li>
+        <li><strong>Arviot: </strong>{{starstring}} ({{wine.reviewcount}})</li>
       </ul>
 
       <p>
@@ -16,6 +17,7 @@
       </p>
 
       <h1>Arviot</h1>
+      <p><strong>Huom! Alla oleva on vielä tässä vaiheessa staattista testidataa.</strong></p>
       <p>Arvioita yhteensä</p>
     
 
