--- a/app/views/base.html
+++ b/app/views/base.html
@@ -7,7 +7,7 @@
 
     <title>
       {% block title %}
-        Tietokantasovellus
+        Viinitietokanta
       {% endblock %}
     </title>
 
@@ -33,22 +33,52 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <h1>Viinitietokanta</h1>
+          <a class="navbar-brand" href="{{base_path}}">Viinitietokanta</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
-          <ul class="nav navbar-nav">
-            <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Etusivu</a></li>
-            <li><a href="signup">Rekisteröidy</a></li>
-            <li><a href="login">Kirjaudu</a></li>
-          </ul>
+          <span>
+            <ul class="nav navbar-nav">
+              <!-- Navigaation linkit -->
+              <li><a href="{{base_path}}">Etusivu</a></li>
+              {% if user_logged_in %}
+                <li><a href="{{base_path}}/logout">Kirjaudu ulos</a></li>
+              {% else %}
+                <li><a href="{{base_path}}/signup">Rekisteröidy</a></li>
+                <li><a href="{{base_path}}/login">Kirjaudu</a></li>
+              {% endif %}
+              </ul>
+          </span>
+            <span class="navbar-text" style="float:right">
+              {% if user_logged_in %}Kirjautunut käyttäjä: {{user_logged_in.name}}{% endif %}
+            </span>
+          
         </div>
       </div>
     </nav>
 
     <div id="main-container">
       <!-- Dynaaminen sisältö tulee tähän -->
+      {% if message %}
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          {{message}}
+        </div>
+      {% endif %}
+      {% if errors %}
+        <div class="alert alert-danger">
+          <ul>
+            {% for error in errors %}
+              <li>{{error}}</li>
+            {% endfor %}
+          </ul>
+        </div>
+      {% endif %}
+      
+
+
+
+
       {% block content %}{% endblock %}
     </div>
 
