--- a/app/views/base.html
+++ b/app/views/base.html
@@ -66,18 +66,16 @@
         </div>
       {% endif %}
       {% if errors %}
-        <div class="alert alert-danger">
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <p>Virheitä:</p>
           <ul>
             {% for error in errors %}
               <li>{{error}}</li>
             {% endfor %}
           </ul>
         </div>
-      {% endif %}
-      
-
-
-
+        {% endif %}
 
       {% block content %}{% endblock %}
     </div>
