--- a/app/views/wine/index.html
+++ b/app/views/wine/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Lista viineistä (index.html)</h1>
+    <h1>Lista viineistä</h1>
 
     <table class="table table-bordered table-striped">
       <thead>
@@ -22,8 +22,10 @@
       </tbody>
     </table>
 
+    {% if user_logged_in %}
     <p>
        <a href="{{base_path}}/wine/new" class="btn btn-default">Lisää viini</a>
     </p>
+    {% endif %}
 
 {% endblock %}
