--- a/app/views/wine/wine_show.html
+++ b/app/views/wine/wine_show.html
@@ -6,7 +6,7 @@
       <ul>
         <li><strong>Alkuperä: </strong>{{wine.region}} </li>
         <li><strong>Tyyppi: </strong>{{wine.type}}</li>
-        <li><strong>Arviot: </strong>{{starstring}} ({{wine.reviewcount}})</li>
+        <li><strong>Arviot (lukumäärä): </strong>{{wine.reviewstars|number_format(2)}} ({{wine.reviewcount}})</li>
       </ul>
 
       <p>
@@ -17,7 +17,7 @@
       <p>
           <a href="{{base_path}}/wine/edit/{{wine.id}}" class="btn btn-default">Muokkaa tietoja</a> 
           <a href="{{base_path}}/wine/delete/{{wine.id}}" class="btn btn-default">Poista</a> 
-          <a href="winereview" class="btn btn-default">Lisää oma arvio (under construction)</a>
+          <a href="{{base_path}}/review/new/{{wine.id}}" class="btn btn-default">Lisää oma arvio</a>
       </p>
       {% endif %}
 
@@ -27,18 +27,22 @@
             {% for review in reviews %}
           <tr>
             <td>{{review.reviewtext}}</td>
-            <td>Tagit: {{review.tags.tagtext}}
-              
+            <td>
               {% for tag in review.tags %}
               <label class="label label-info"> 
               {{tag.tagtext}} 
               </label>&nbsp
               {% endfor %}
-              
-              
-              </td>
-            <td>User: {{review.userid}}</td>
-            <td>Stars: {{review.stars}}</td>
+            </td>
+            <td>
+              {{review.userid}}
+            </td>
+            <td>
+              {% for i in 1..review.stars %}<span class="glyphicon glyphicon-star"></span>{% endfor %}
+            </td>
+            <td>
+              {% if review.userid == user_logged_in.id %} <a href="{{base_path}}/review/delete/{{review.id}}" >Poista</a> {% endif %}
+            </td>
           </tr>
           {% endfor %}
         </tbody>
