--- a/app/views/review/edit.html
+++ b/app/views/review/edit.html
@@ -2,31 +2,38 @@
 
 {% block content %}
 
-    <h1>Muokkaa viiniarviota</h1>
+    <h1>Muokkaa omaa viiniarvostelua</h1>
 
-    <h2>Valittu viini: Bouchard La Vignée Pinot Noir 2014</h2>
-   
+    <h2>Valittu viini: {{wine.name}}</h2>
+    
+    <form method="post" action="{{base_path}}/review/update">
+    <input type="hidden" class="form-control" name="id" value="{{review.id}}">
+    <input type="hidden" class="form-control" name="wineid" value="{{wine.id}}">
     <p>Sanallinen arvio</p>
-    <textarea class="form-control" rows="3"></textarea>
+    <textarea class="form-control" rows="3" name="reviewtext">{{review.reviewtext}}</textarea>
     <p>Arvio (tähdet)</p>
-    <select class="form-control">
-            <option>*</option>
-            <option>**</option>
-            <option>***</option>
-            <option>****</option>
-            <option>*****</option>
+    <select class="form-control" name="stars">
+            <option value="1" {% if review.stars==1 %}selected{% endif %} >*</option>
+            <option value="2" {% if review.stars==2 %}selected{% endif %} >**</option>
+            <option value="3" {% if review.stars==3 %}selected{% endif %} >***</option>
+            <option value="4" {% if review.stars==4 %}selected{% endif %} >****</option>
+            <option value="5" {% if review.stars==5 %}selected{% endif %} >*****</option>
     </select>
 
     <p>
     Valitse sopivat tägit:
-    <input type="checkbox" id="inlineCheckbox1" value="1"> Kirsikka
-    <input type="checkbox" id="inlineCheckbox1" value="2"> Mustikka
-    <input type="checkbox" id="inlineCheckbox1" value="3"> Raikas
-    <input type="checkbox" id="inlineCheckbox1" value="4"> Vanilja
-    <input type="checkbox" id="inlineCheckbox1" value="5"> Suklaa
+    {% for tag in tags %}
+        <input type="checkbox" id="inlineCheckbox1" name="tags[]" value="{{tag.id}} " 
+            {% for selectedtag in review.tags %} {% if tag.id==selectedtag.id %}checked{% endif %}{% endfor %}
+        > 
+    {{tag.tagtext}} 
+    {% endfor %}
     </p>
 
     <p>
-    <input class="btn btn-default" type="submit" value="Lähetä arvio">
+    <button type="submit" class="btn btn-default">Lähetä</button>
     </p>
+
+
+    </form>
 {% endblock %}
