lisätty painikkeisiin glyphicon kuvia

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,7 +40,7 @@
           <span>
             <ul class="nav navbar-nav">
               <!-- Navigaation linkit -->
-              <li><a href="{{base_path}}">Etusivu</a></li>
+              <li><a href="{{base_path}}"><span class="glyphicon glyphicon-home"></span> Etusivu</a></li>
               {% if user_logged_in %}
                 <li><a href="{{base_path}}/logout">Kirjaudu ulos</a></li>
               {% else %}
