--- a/app/views/wine/index.html
+++ b/app/views/wine/index.html
@@ -37,7 +37,7 @@
 
     {% if user_logged_in %}
     <p>
-       <a href="{{base_path}}/wine/new" class="btn btn-default">Lisää viini</a>
+       <a href="{{base_path}}/wine/new" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Lisää viini</a>
     </p>
     {% endif %}
 
