--- a/app/views/wine/wine_show.html
+++ b/app/views/wine/wine_show.html
@@ -35,7 +35,7 @@
           {% endfor %}
         </td>
         <td>
-          {{review.userid}}
+          {{review.userid}}{{review.username}}
         </td>
         <td>
           {% for i in 1..review.stars %}<span class="glyphicon glyphicon-star"></span>{% endfor %}
