--- a/app/views/wine/index.html
+++ b/app/views/wine/index.html
@@ -27,7 +27,7 @@
             {% endif %}
           </td>
           <td>
-              <span class="badge">{{wine.reviewcount}}</span></span>
+              <span class="badge">{{wine.reviewcount}} kpl</span></span>
           </td>
 
         </tr>
