--- a/app/views/review/new.html
+++ b/app/views/review/new.html
@@ -7,10 +7,11 @@
     <h2>Valittu viini: {{wine.name}}</h2>
     
     <form method="post" action="{{base_path}}/review">
-    <input type="hidden" class="form-control" name="wineid" value="{{wine.id}}">
+    <input type="hidden" name="wineid" value="{{wine.id}}">
     <p>Sanallinen arvio</p>
     <textarea class="form-control" rows="3" name="reviewtext">{{review.reviewtext}}</textarea>
     <p>Arvio (tähdet)</p>
+    
     <select class="form-control" name="stars">
             <option value="1">*</option>
             <option value="2">**</option>
