--- a/app/views/user/signup.html
+++ b/app/views/user/signup.html
@@ -4,8 +4,8 @@
 
     <h1>Rekisteröidy käyttäjäksi</h1>
     <form method="post" action="{{base_path}}/signup">
-        <input type="text" name="email" class="form-control" id="exampleInputEmail3" placeholder="Sähköposti">
-        <input type="text" name="name" class="form-control" id="exampleInputEmail3" placeholder="Nimi">
+        <input type="text" name="email" class="form-control" id="exampleInputEmail3" placeholder="Sähköposti" value="{{user.email}}">
+        <input type="text" name="name" class="form-control" id="exampleInputEmail3" placeholder="Nimi" value="{{user.name}}">
         <input type="text" name="password" class="form-control" id="exampleInputPassword3" placeholder="Salasana">
         <input type="text" name="password_confirm" class="form-control" id="exampleInputPassword3" placeholder="Salasanan varmistus">
         <button type="submit" class="btn btn-default">Rekisteröidy</button>
