--- a/app/views/review/edit.html
+++ b/app/views/review/edit.html
@@ -24,10 +24,9 @@
     <p>
     Valitse sopivat tägit:
     {% for tag in tags %}
-        <input type="checkbox" id="inlineCheckbox1" name="tags[]" value="{{tag.id}} " 
+        <input type="checkbox" id="inlineCheckbox1" name="tags[]" value="{{tag.id}}" 
             {% for selectedtag in review.tags %} {% if tag.id==selectedtag.id %}checked{% endif %}{% endfor %}
-        > 
-    {{tag.tagtext}} 
+        >&nbsp;{{tag.tagtext}}  
     {% endfor %}
     </p>
 
